[package]
name = "p2p"
version = "0.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "grpc-server"
path = "src/server.rs"

[dependencies]
tokio = { version = "1.33.0", features = ["full"] }
anyhow = "1.0"
tokio-stream = "0.1"
rand = "0.8"
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
tonic = "0.10"
prost = "0.12"

[build-dependencies]
tonic-build = "0.10"
