[package]
name = "p2p"
version = "0.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.33.0", features = ["full"] }
anyhow = "1.0"
tokio-stream = "0.1"
rand = "0.8"
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
bincode = "2.0.0-rc.3"
dashmap = "5.5"
futures = "0.3"

[dev-dependencies]
env_logger = "0.10"
